plugins/kotlin/idea/tests/testData/multiplatform/diamondSeesTwoActuals/right/right.kt
package sample

actual class <!LINE_MARKER("descr='Has expects in top module'")!>A<!> /* Right */ {
    actual fun <!LINE_MARKER("descr='Has expects in top module'")!>foo<!>(): Int = 100500
}
